--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@ header h1 {
 }
 
 .scoreboard .badge {
+  margin-top: 10px;
   display: inline-block;
   padding: 10px 20px;
+  font-weight: bold;
 }
