--- a/src/components/Game_Board.css
+++ b/src/components/Game_Board.css
@@ -13,7 +13,7 @@
     justify-content: center;
     width: 100px;
     height: 100px;
-    border: 1px solid #000;
+    border: 1px solid #09022c;
     background-color: #f9f9f9;
 }
 
